# Project2025

./: .gitignore  pyproject.toml  requirements.txt
.venv-tb/: pyvenv.cfg
notebooks/: eda_amazon.ipynb  eda_yelp.ipynb
outputs/checkpoints/: lightgcn_epoch_100.pt  lightgcn_epoch_110.pt  lightgcn_epoch_120.pt  lightgcn_epoch_130.pt  lightgcn_epoch_140.pt  lightgcn_epoch_150.pt  lightgcn_epoch_160.pt  lightgcn_epoch_170.pt  lightgcn_epoch_180.pt  lightgcn_epoch_190.pt  lightgcn_epoch_20.pt  lightgcn_epoch_200.pt  lightgcn_epoch_30.pt  lightgcn_epoch_40.pt  lightgcn_epoch_50.pt  lightgcn_epoch_60.pt  lightgcn_epoch_70.pt  lightgcn_epoch_80.pt  lightgcn_epoch_90.pt
outputs/logs/20250708-170743/: events.out.tfevents.1751962063.YotaMBA.local.10446.0
outputs/logs/20250709-160208/: events.out.tfevents.1752044528.YotaMBA.local.19430.0
outputs/logs/20250709-160343/: events.out.tfevents.1752044623.YotaMBA.local.19534.0
outputs/logs/20250709-161012/: events.out.tfevents.1752045012.YotaMBA.local.19780.0
outputs/logs/20250709-161316/: events.out.tfevents.1752045196.YotaMBA.local.19927.0
outputs/logs/20250709-161430/: events.out.tfevents.1752045270.YotaMBA.local.20033.0
outputs/logs/20250709-163524/: events.out.tfevents.1752046524.YotaMBA.local.20888.0
outputs/results/: lightgcn_eval_metrics.csv
src/project2025/: __main__.py
src/project2025_lightgcn/: README.md  __main__.py  data_split.py  dataloader.py  metrics.py  model.py  procedure.py  register.py  utils.py  world.py
src/project2025_lightgcn/split_data/: item2id.pkl  test.parquet  (+2 more)
tests/: test_main.py
(+16 files in other folders)
